--- a/src/containers/EditSliders/EditSliders.scss
+++ b/src/containers/EditSliders/EditSliders.scss
@@ -4,6 +4,7 @@
 .edit-sliders {
   font-family: $primary-font, $font-type;
   color: $font-color-black;
+  padding-top: $margin-standard * 2.4;
   height: 100%;
 
   .presets {
